mule-user-guide/v/3.8/dotnet-connector-guide.adoc
= .NET Connector Guide
:keywords: dotnet connector, dotnet, dot net, microsoft, c#, c sharp, visual studio, visual basic

The .NET Connector, referred to as *DotNet connector* herein and in Mule application code, allows you to call .NET code from a Mule flow.

*.NET Connector Documentation*:

* link:/mule-user-guide/v/3.8/dotnet-connector-user-guide[.NET Connector User Guide]
* link:/mule-user-guide/v/3.8/dotnet-connector-migration-guide[.NET Connector Migration Guide]
* link:/mule-user-guide/v/3.8/dotnet-connector-faqs[.NET Connector FAQs]
* link:/release-notes/dotnet-connector-release-notes[.NET Connector Release Notes]
* link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip]

== Prerequisites

This document assumes that you are familiar with Mule, the link:/mule-fundamentals/v/3.8/anypoint-studio-essentials[Anypoint Studio interface], and link:/mule-fundamentals/v/3.8/global-elements[Global Elements]. Further, it is assumed that you are familiar with the Microsoft .NET Framework.

To complete this tutorial, you need the following components installed on your machine:

* The link:http://www.microsoft.com/net[Microsoft .NET framework]

* Anypoint Studio, the graphical interface to Mule. See link:/mule-fundamentals/v/3.8/download-and-launch-anypoint-studio[Download and Launch Anypoint Studio] for details

[WARNING]
====
The .NET connector version 1.0 is incompatible with version 2.0. Please refer to the link:/mule-user-guide/v/3.8/dotnet-connector-migration-guide[.NET connector migration guide] if you are an existing user of .NET connector 1.0.
====

== Installing the .NET Connector in Anypoint Studio

You can install a connector in Anypoint Studio using the instructions in link:/mule-fundamentals/v/3.8/anypoint-exchange#installing-a-connector-from-anypoint-exchange[Installing a Connector from Anypoint Exchange].  

== Example Mule Application Using .NET Connector

This example introduces the .NET Connector and shows you how to configure it to execute a method in a .NET assembly.

The example uses the following Mule message processors:

[width="100%",cols=",",options="header"]
|===
|Component |Description
|*DotNet Connector* |Execute Microsoft .NET code from inside a Mule flow.
|*link:/mule-user-guide/v/3.8/http-connector[HTTP Connector]* |Enables the example application to receive and send HTTP requests.
|*link:/mule-user-guide/v/3.8/set-payload-transformer-reference[Set Payload Transformer] * |The set payload transformer sets the payload to whatever you define. The payload can be a literal string or a Mule Expression.
|*link:/mule-user-guide/v/3.8/dataweave[DataWeave]* |DataWeave is a Mule transformer that delivers simple, yet powerful, visual design of complex data transformations for use in Mule flows.
|===

=== Step 1. Creating a .NET Component

To create the .NET component that will be called from Mule, start Visual Studio and create a new C# Class Library project.

To create a new project:

. Select *File* > *New* > *Project*.

. In the *New Project* dialog, select the Class Library template under Visual C#.  Name the Project “Test.SampleComponent”.
+
image:dotnetcomponent.png[dotnetcomponent]

. Create a class named `Sample` with the following code:
+
[source, code, linenums]
----
namespace Test.SampleComponent
{
   public class Sample
   {
       public object ExecuteComplex(Person person)
       {
         person.Name += " updated from .net";          
         person.MyRide.Brand = person.MyRide.Brand.Replace("GM", Chevrolet");
         person.MyRide.Model = person.MyRide.Model + " - " + "400x";
         person.MyRide.ExteriorColor.Name += "ISH";
         person.MyRide.ExteriorColor.RGB = "no clue";
         return person;
       }
   }
}
----

. Compile the project to create the `Test.SampleComponent.dll` assembly.

. Copy the .dll file to the `C:\Sample` directory.

=== Step 2. Creating a New Anypoint Studio Project

To begin building this application, start Anypoint Studio and create a new project.

. Select *File* > *New* > *Mule Project*.

. In the New Mule Project configuration menu, provide a name for this project: `dotnet_demo`.

. Click *Finish*.

A new project opens with a blank canvas for building the flow, and the palette with Message Processors to the right.

=== Step 3. Creating a .NET Global Element

To create and configure a .NET global element, follow these steps:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.

. Use *DotNet Connector* as filter to locate, then select the Global Type:
+
image:dotnet-connector-guide-global-type.png[global-type]
+
. Choose *DotNet: External Assembly* and click *OK*.
. Configure the External Assembly global type:
+
image:dotnet-connector-guide-global-element-external-assembly.png[external assembly]
+
[width="100%",cols=",",options="header"]
|===
|Parameter | Value
|*Name* |DotNet_External_Assembly
|*Scope* |Transient
|*Grant Full Trust to the .NET assembly* |True (select the check box)
|*Declared methods only* |True (select the check box)
|*Assembly*: *Path* |Path to the Test.SampleComponent.dll file
|===
+
You will reference this global element when configuring the DotNet connector.

=== Step 4. Creating a Demo Flow

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Drag an HTTP connector onto the canvas, then select it to open the properties editor console.
. Add a new HTTP Listener Configuration global element:
.. In *Basic Settings*, click the Add button:
+
image:connector-configuration.png[http listener connector config add button]
+
..  Configure the following HTTP parameters:
+
[width="100%",cols=",",options="header"]
|===
|Field |Value
|*Port* |8081
|*Path* |dotnet
|*Host* |localhost
|*Exchange Patterns* |request-response
|*Display Name* |HTTP (or any other name you prefer)
|===
. Reference the HTTP Listener Configuration global element you created in the previous step:
+
image:select-global-element.png[reference global element]
. Drag a *Set payload* transformer onto the canvas, then select it to open the properties editor console.
. Configure the required filter parameters as follows:
+
[width="100%",cols=",",options="header"]
|===
|Field |Value
|*Value* |`{ "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : { "Model" : "Coupe", "Brand" : "GM", "Color" : { "Name" : "red", "RGB" : "123,220,213" } } }}`
|*Display Name* |Set Payload (or any other name you prefer)
|===

+

[NOTE]
====
The string you enter in the *Value* field represents a serialized JSON object for a Person class, defined in Java:

[source, java, linenums]
----
namespace Test.SampleComponent{ 
  public class Person
    {
        public string Name {
          get; set;
        }
        public int Id {
          get; set;
        }
        public string LastName {
          get; set;
        }
        public Car MyRide {
          get; set;
        }
    }
    public class Car
    {
       public string Model {
         get; set;
       }
       public string Brand {
         get; set;
       }
       public Color ExteriorColor {
         get; set;
       }
    }
}
----
====
+
. Create a JSON sample file in your project named *input.json* and copy the following content into it for the DataWeave to use as example input.
+
[source, code, linenums]
----
"person" : { "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : { "Model" : "Coupe", "Brand" : "GM", "Color" : { "Name" : "red", "RGB" : "123,220,213" }  } }}
----
+
. Drag a *Transform Message* component from the palette, and place it into the canvas after the *Set Payload* transformer.
. In the *Transform Message* component, click *Define metadata*.
+
image:dotnet-connector-guide-9a049.png[example json referenced]
+
. Click the "Add" button to enter a type id for the JSON sample file you are going to reference. This will be the label for your input.
. Similarly define your output metadata back in the *Transform Message* properties editor if the metadata from the .NET connector has not already been sensed by DataSense.
image:dotnet-connector-guide-2da72.png[transform message output section]
. Drag the .NET connector onto the palette, then place it into the canvas after the set payload transformer. Configure the DotNet connector as shown below.
+
image:dotnet-connector-screen.png[dotnet-connector-screen]
image:dotnet-connector-guide-21c12.png[dotnet connector properties]
+
[NOTE]
====
The “Type” dropdown in the .NET connector properties is the .NET type that will be reflected upon to see which method it should call. The “Method” reference is the method on the type that was selected in the “Type” dropdown which will be invoked by the connector.
====
+
[width="100%",cols=",",options="header"]
|===
|Field |Value
|*Operation* |Execute
|*Method* |Test.SampleComponent.Sample.ExecuteComplex(Test.SampleComponent.Person person) 
|*Display Name* |DotNet Connector (or any other name you prefer)
|*Connector Configuration* |DotNet_External_Assembly
|===
+
[NOTE]
====
Note that the *Config Reference* field references the DotNet global element created previously.
====

After completing the above steps, your application flow should look like this:

image:dotnet-connector-guide-22ab1.png[dotnet connector example flow]

....
[tab,title="XML Code"]
....
[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:dotnet="http://www.mulesoft.org/schema/mule/dotnet" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/dotnet http://www.mulesoft.org/schema/mule/dotnet/current/mule-dotnet.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">
    <dotnet:externalConfig name="DotNet__External_Assembly" scope="Transient" path="C:\Samples\Test.SampleComponent.dll" doc:name="DotNet: External Assembly"/>
    <flow name="dotnet-connectorFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <set-payload value="{ &quot;name&quot; : &quot;bar&quot;, &quot;lastName&quot; :  &quot;foo&quot;, &quot;id&quot; : 1, &quot;myRide&quot; : { &quot;Model&quot; : &quot;Coupe&quot;, &quot;Brand&quot; : &quot;GM&quot;, &quot;Color&quot; : { &quot;Name&quot; : &quot;red&quot;, &quot;RGB&quot; : &quot;123,220,213&quot; } } }}" doc:name="Set Payload"/>
        <dw:transform-message metadata:id="518e1209-f93d-4bba-bd59-1d6607d40135" doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
}]]></dw:set-payload>
        </dw:transform-message>
        <dotnet:execute config-ref="DotNet__External_Assembly" methodName="Test.SampleComponent.Sample.ExecuteComplex(Test.SampleComponent.Person person) " doc:name="DotNet"/>
    </flow>
</mule>
----
....
------

=== Step 5. Running the Application

You are now ready to run the project! First, you can test run the application from Studio:

. Right-click your application in the Package Explorer pane.

. Select *Run As* > *Mule Application*.

. Fire up a browser and go to `http://localhost:8081/dotnet/?name=foo&age=10` to see the JSON response.


=== Step 6. About the Example Application

The flow you built in Anypoint Studio contains message processors – including the HTTP Connector, Data Mapper, Set Payload Transformer and the .NET Connector — and it is the "Mule messages" that carry data between these message processors.

A Mule message contains the following components:

* *Payload*: The actual data contained in the message

* *Properties*: Message metadata, which can include user-defined parameters

In this example, we can see the .NET connector was able to receive parameters from Mule, and to create and return a new message payload that was routed by Mule back to the caller. The .NET Connector allows .NET components to be used to provide custom logic to Mule flows.

== See Also

* Learn more about the .NET connector:
** link:/mule-user-guide/v/3.8/dotnet-connector-user-guide[DotNet Connector User Guide]
** link:/mule-user-guide/v/3.8/anypoint-extensions-for-visual-studio[Anypoint Extensions for Visual Studio]
** link:/mule-user-guide/v/3.8/dotnet-connector-migration-guide[DotNet Connector Migration Guide]
** link:/mule-user-guide/v/3.8/dotnet-connector-faqs[DotNet Connector FAQs]
** link:/release-notes/dotnet-connector-release-notes[DotNet Connector Release Notes]

* For code samples that illustrate more advanced scenarios, refer to the link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip] and the link:_attachments/dotnet-connector-sdk.zip[dotnet-connector-sdk.zip].
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
